--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
 language: php
 
+php:
+  - '7.1'
+
+git:
+    depth: 1
+
 dist: trusty
+
+before_script:
+    - composer install
+
+script:
+  - ./vendor/bin/phpunit
